--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 <head> 
   <script src="js/scripts.js"></script>
   <title>Escapism</title>
-  <link rel="stylesheet" href="css/paradise.css">  
+  <link rel="stylesheet" href="css/styles.css">  
 </head>
 <body>
+<header>
+  <div class="main">
+    <ul>
+      <li><a href="home.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </div>
+</header>           
+</body>
+</html>
+
+
+
