--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 <header>
   <div class="main">
+    <img src="img/escapism.png">
     <ul>
       <li><a href="home.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
