add glowing greetings

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
-</header>           
+</header>
+<div class="title">
+  <h1 class="glow"> WELCOME TO THE PARADISE </h1>   
+</div>         
 </body>
 </html>
 
