--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
   <title>Escapism</title>
   <link rel="stylesheet" href="css/styles.css">  
 </head>
-<body>
 <header>
   <div class="main">
     <img src="img/escapism.png">
     <ul>
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
+  <div class="header">
+    
+  </div>
 </header>
+<body>
 <div class="title">
   <h1 class="glow"> WELCOME TO THE PARADISE </h1>   
 </div>         
