add Services page and enterntaiment content

--- a/services.html
+++ b/services.html
@@ -5,10 +5,9 @@
   <title>Services</title>
   <link rel="stylesheet" href="css/styles.css">  
 </head>
-<body>
 <header>
   <div class="main">
-    <img src="img/escapism.png">
+    <img src="img/escapism1.png" class="logo">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
@@ -16,9 +15,16 @@
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
-  </div>
-</header>
-
-
-</body>
-</html>
+ <body>
+  <h2> ENTERTAINMENTS </h2>    
+  <div class="ent"></div> 
+  <div class="entText">
+    <p>Escapism resort is a place where magic lives in the details and extraordinary experiences can be found around every corner. Much of the electric thrill that fills our resort comes from the marvels of acrobatics, intoxicating musical performances, and magnificent displays of Mexican culture presented nightly by Escapism Entertainment.</p>
+  </div> 
+  <div class="ent1"></div>
+  <div class="entText1">
+    <p>Jungala is a boutique experience dedicated to high-end lounging, sumptuous pampering, and amazing attractions. It’s complete with park concierges, wonderful new dining concepts, spa services, and a collection of world-class rides. From the longest lazy river in Latin America to the cutting-edge wave pool with waves up to 1.5 meters high, Jungala offers something for every sun-seeker.</p>
+  </div> 
+ </body>
+ </html>
+  
