--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <header>
   <div class="main">
-    <img src="img/escapism.png">
+    <img src="img/escapism1.png" class="logo">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
@@ -16,14 +16,11 @@
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </div>
-  <div class="header">
-    
-  </div>
+  <div class="header"></div>
 </header>
 <body>
-<div class="title">
-  <h1 class="glow"> WELCOME TO THE PARADISE </h1>   
-</div>         
+  <img src="img/index.jpg" class="mainImage">
+  <h1 class="glow"> WELCOME TO THE PARADISE </h1>       
 </body>
 </html>
 
